# Drake

./: .gitignore  README
Game Data/Sephix/Inside/Bank/: Entryway.rm
Game Data/Sephix/Inside/Blacksmith/: Entry.rm  Forge.rm
Game Data/Sephix/Inside/Blue Mare Inn/: Main Lobby.rm
Game Data/Sephix/Inside/Jeweler/: Main Gallery.rm
Game Data/Sephix/Outside/Lower District/: Base of Rasac's Climb.rm
Game Data/Sephix/Outside/Market/: Bathhouse Entrance.rm  Central Square.rm  East Square.rm  North Square.rm  Northwest Square.rm  South Square.rm  Vitenir's Arch.rm
Game Data/Sephix/Outside/Staircases/: Rasac's Climb.rm  Ysgrild's Shrine.rm
Game Data/Test/Arena/: Foyer.rm
Game Data/Test/Death/: Death Room.rm
Game Data/Test/Town/: Arena Entrance.rm  Inn Entrance.rm  Town Square.rm
haskell/: drake.cabal
haskell/Data/Test/: Home.rm
haskell/Game/: GameLoop.hs
haskell/Game/Command/: Move.hs  Parser.hs
haskell/Game/GameObjects/: NPC.hs  NPCRegistry.hs  Player.hs  PlayerMap.hs  Room.hs  World.hs
haskell/Game/Network/: Client.hs  Server.hs  Server.hs~
haskell/Game/Parsers/: Room.hs
haskell/Weather/: Monad.hs
haskell/Weather/Atmosphere/: Pressure.hs  Temperature.hs
haskell/Weather/Parser/: .Zone.hs.swp  Zone.hs  Zone.hs~
haskell/Weather/Region/: RegionMap.hs
src/drake/: client.py
src/drake/command/: command.py  registry.py
src/drake/command/builtins/: __init__.py  close.py  emote.py  health.py  kill.py  logout.py  look.py  move.py  (+1 more)
src/drake/database/: connection.py  player.py
src/drake/objects/: room.py  world.py
src/drake/server/: server.py
(+14 files in other folders)
