Version:                0.1
name:                   drake
Description:            Files for developing MUD project
License:                BSD3
Author:                 Aaron Brenzel
Build-Type:             Simple
Cabal-Version:          >= 1.2

library
    Build-Depends:      stm,parsec,base,containers,bytestring
    Exposed-modules:
        Weather.Parser.Zone