Version:                0.1
name:                   weather
Description:            Weather Simulator
License:                AGPL
Author:                 Aaron Brenzel
Build-Type:             Simple
Cabal-Version:          >= 1.2

library
    Build-Depends:      stm,parsec,base,containers,bytestring
    Exposed-modules:
        Weather.Parser.Zone, Weather.Atmosphere.Temperature,
		Weather.Atmosphere.Pressure